--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <meta name="author" content="Valeria Douleba">
         <title>Val's Portfolio Webpage</title>
         <link rel="stylesheet" href="css/style.css">
-        <script src="/UX_UI_HW_19/jquery/jquery-3.6.0.min.js"></script>
-    <script src="/UX_UI_HW_19/index.js"></script>
+        <script src="jquery/jquery-3.6.0.min.js"></script>
+    <script src="index.js"></script>
 
     <link rel=“stylesheet” href=“https://pro.fontawesome.com/releases/v5.10.0/css/all.css”>
     <script src=“https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js”>
@@ -51,17 +51,17 @@
 <section id="boxes">
   <div class="container">
     <div class="box">
-      <img src="/UX_UI_HW_19/images/icon_1.png">
+      <img src="images/icon_1.png">
       <h3>User Research</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
     </div>
     <div class="box">
-      <img src="/UX_UI_HW_19/images/icon_2.png">
+      <img src="images/icon_2.png">
       <h3>User Interface Design</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
     </div>
     <div class="box">
-      <img src="/UX_UI_HW_19/images/icon_3.png">
+      <img src="images/icon_3.png">
       <h3>Web Development</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
     </div>
@@ -74,7 +74,7 @@
 <section>
 
     <div class="grid-flex">
-      <div class="col col-image" style="background-image: url(/UX_UI_HW_19/images/cs1.png);"></div>
+      <div class="col col-image" style="background-image: url(images/cs1.png);"></div>
         <div class="col col-text">
         <div class="Aligner-item">
         <h3>Space Out</h3>
@@ -85,18 +85,18 @@
   </div>
 
   <div class="grid-flex">
-    <div class="col col-image" style="background-image: url(/UX_UI_HW_19/images/cs2.png);"></div>
+    <div class="col col-image" style="background-image: url(images/cs2.png);"></div>
       <div class="col col-text">
       <div class="Aligner-item">
         <h3>New York Public Library</h3>
         <p>A redesign of this website enhanced its usability, organisation and aesthetic.</p>
-        <button class="button2">Hire Me</button>
+        <a class="button2" href="casestudy.html" role="button">Case Study</a>
       </div>
     </div>
   </div>
 
   <div class="grid-flex">
-    <div class="col col-image" style="background-image: url(/UX_UI_HW_19/images/cs3.png);"></div>
+    <div class="col col-image" style="background-image: url(images/cs3.png);"></div>
       <div class="col col-text">
       <div class="Aligner-item">
         <h3>Paws</h3>
